<resources>
    <string name="app_name">Form App</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="birth_day">Birthday</string>
    <string name="email">Email</string>
    <string name="pin">Pin</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="confirm">Confirm</string>
    <string name="name_still">Name:</string>
    <string name="phone_still">Phone:</string>
    <string name="address_still">Address:</string>
    <string name="email_still">Email:</string>
    <string name="birthday_still">Birthday:</string>
    <string name="gender_still">Gender:</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="states">
        <item>Andaman and Nicobar Island</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya	</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>The Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>

</resources>