<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".FormInformation">

        <TextView
            android:id="@+id/tv_name_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/name_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Souvik Mondal" />

        <View
            android:id="@+id/view_under_name"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_phone_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/phone_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_name" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_name"
            tools:text="" />

        <View
            android:id="@+id/view_under_phone"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_still" />


        <TextView
            android:id="@+id/tv_address_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/address_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_phone" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_phone"
            tools:text="" />

        <View
            android:id="@+id/view_under_address"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_address"
            tools:text="" />

        <View
            android:id="@+id/view_under_city"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_city" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_city"
            tools:text="" />

        <View
            android:id="@+id/view_under_state"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_state" />

        <TextView
            android:id="@+id/tv_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_state"
            tools:text="" />

        <View
            android:id="@+id/view_under_pin"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_pin" />

        <TextView
            android:id="@+id/tv_mail_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/email_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_pin" />

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_pin"
            tools:text="" />

        <View
            android:id="@+id/view_under_email"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_mail" />

        <TextView
            android:id="@+id/tv_birthday_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/birthday_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_email" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_email"
            tools:text="" />

        <View
            android:id="@+id/view_under_birthday"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday" />

        <TextView
            android:id="@+id/tv_gender_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/gender_still"
            android:textColor="#515151"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_birthday" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text=""
            android:textColor="#212121"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_birthday"
            tools:text="" />

        <View
            android:id="@+id/view_under_gender"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="80dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>